// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main snapshot renders 1`] = `
<ConfigLayout
  dimensions={Object {}}
  hideSettings={true}
  settings={null}
>
  <RadioGroup
    aria-label="rubric-type"
    name="rubricType"
    onChange={[Function]}
    value="simpleRubric"
  >
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Radio)
          checked={true}
        />
      }
      key="0"
      label="Simple Rubric"
      value="simpleRubric"
    />
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Radio)
          checked={false}
        />
      }
      key="1"
      label="Multi Trait Rubric"
      value="multiTraitRubric"
    />
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Radio)
          checked={false}
        />
      }
      key="2"
      value="rubricless"
    />
  </RadioGroup>
  <rubric-configure
    id="simpleRubric"
    key="simple-rubric"
  />
</ConfigLayout>
`;

exports[`Main snapshot renders multi trait rubric 1`] = `
<ConfigLayout
  dimensions={Object {}}
  hideSettings={true}
  settings={null}
>
  <RadioGroup
    aria-label="rubric-type"
    name="rubricType"
    onChange={[Function]}
    value="multiTraitRubric"
  >
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Radio)
          checked={false}
        />
      }
      key="0"
      label="Simple Rubric"
      value="simpleRubric"
    />
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Radio)
          checked={true}
        />
      }
      key="1"
      label="Multi Trait Rubric"
      value="multiTraitRubric"
    />
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Radio)
          checked={false}
        />
      }
      key="2"
      value="rubricless"
    />
  </RadioGroup>
  <multi-trait-rubric-configure
    id="multiTraitRubric"
    key="multi-trait-rubric"
  />
</ConfigLayout>
`;

exports[`Main snapshot renders simple rubric 1`] = `
<ConfigLayout
  dimensions={Object {}}
  hideSettings={true}
  settings={null}
>
  <RadioGroup
    aria-label="rubric-type"
    name="rubricType"
    onChange={[Function]}
    value="simpleRubric"
  >
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Radio)
          checked={true}
        />
      }
      key="0"
      label="Simple Rubric"
      value="simpleRubric"
    />
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Radio)
          checked={false}
        />
      }
      key="1"
      label="Multi Trait Rubric"
      value="multiTraitRubric"
    />
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Radio)
          checked={false}
        />
      }
      key="2"
      value="rubricless"
    />
  </RadioGroup>
  <rubric-configure
    id="simpleRubric"
    key="simple-rubric"
  />
</ConfigLayout>
`;
